# wedding.finley.sh

./: .editorconfig  .gitignore  Makefile  Pipfile  README.md  invite-email.html  pyproject.toml  runway.yml
acm-cert.cfn/: cfngin.yml
staticsite.web/: README.md  package-lock.json  package.json  tsconfig.json
staticsite.web/public/: index.html
staticsite.web/src/: App.css  App.js  App.test.js  history.ts  index.css  index.scss  index.tsx
staticsite.web/src/components/: App.scss  App.tsx
staticsite.web/src/components/countdown/: CountdownClock.scss  CountdownClock.tsx
staticsite.web/src/components/gifts/: amazon.tsx  gifts.scss  paypal.tsx
staticsite.web/src/components/hoc/: themeProvider.tsx
staticsite.web/src/components/staticPages/: HomePage.scss  HomePage.tsx  OurStoryPage.tsx
staticsite.web/src/components/ui/card/: weddingGifts.tsx
staticsite.web/src/components/ui/footer/: Footer.scss  Footer.tsx
staticsite.web/src/components/ui/header/: Header.scss  Header.tsx
staticsite.web/src/components/ui/themeSwitcher/: ThemeSwitcher.tsx
staticsite.web/src/context/: ThemeContext.ts
staticsite.web/src/redux/: store.ts
staticsite.web/src/redux/actions/: ui.ts
staticsite.web/src/redux/reducers/: index.ts  ui.ts
