[tool.poetry]
name = "wedding.finley.sh"
version = "0.0.0"
description = "Wedding website."
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
runway = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
